--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "express": "^4.15.3",
     "mongoose": "^4.10.8",
     "nodemon": "^1.11.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
   }
 }
